# thonny-ev3dev

./: .gitignore  CHANGELOG.md  Changelog.txt  Developing.md  LICENSE.txt  README.md  README_bash_scripts.txt  build_and_update_installation.bash  build_pypi_packages.bash  cleanup_python_user_site.bash  context.txt  ev3cmd.py  ev3dev2  ev3dev2simulator  ev3devcmd.py  ev3devcontext.py  ev3devlogging.py  ev3devrpyc.py  git_clone_all_projects.bash  git_pull_all_projects.bash  git_push_all_projects.bash  git_status_all_projects.bash  install_dependencies.bash  install_dependencies_in_thonny.bash  install_local_pypi_packages_in_thonny.bash  list_all_dependencies_plugin_as_list.bash  list_all_versions.bash  list_dependencies_pypi_packages.bash  list_dependencies_pypi_packages_as_list.bash  list_dependencies_pypi_packages_in_markdown.bash  list_ev3devcmd_help.bash  list_git_status_all_projects.bash  lockfile.macos_arm64.txt  project.bash  pyproject.bash  pyproject.toml  reinstall_build_pypi_packages.bash  reinstall_dependencies.bash  reinstall_local_pypi_packages_in_thonny.bash  requirements.txt  (+4 more)
ev3dev2simulator_package/: DemoRoverBasic.py  DemoRoverSimple.py  MANIFEST.in  README.md  __README__.txt  demo.py  ev3robot.py  run_ev3robot.sh  run_ev3simulator.sh  setup.py  test_classic.py  test_new.py
ev3devcmd_package/: README.md  ev3devcmd.py  setup.py  testcmd.py
ev3devcontext_package/: README.md  ev3devcontext.py  setup.py
ev3devlogger_package/: README.md  ev3devlogging.py  setup.py  testlogger.py
ev3devrpyc_package/: README.md  ev3devrpyc.py  setup.py
(+46 files in other folders)
