[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "thonny-ev3dev"
#version = "0.0.1"
dynamic = ["version"]
authors = [{name = "Harco Kuppens", email = "h.kuppens@cs.ru.nl"}]
license = {file = "LICENSE.txt"}
description = "A plug-in which adds EV3 support for Thonny"
keywords = [
    "IDE",
    "education",
    "programming",
    "EV3",
    "mindstorms",
    "lego",
]
classifiers = [
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Software Development",
]
requires-python = ">=3.6"
dependencies = ["ev3devcmd==1.0.2", "ev3dev2simulator"]

[project.urls]
Homepage = "https://github.com/ev3dev-python-tools/thonny-ev3dev"

[tool.setuptools.package-data]
"thonnycontrib.ev3dev" = ["res/*"]

[tool.setuptools.dynamic]
version = {attr = "thonnycontrib.ev3dev.version.__version__"}
